--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-  <div class="card">
-    <div class="search">
-      <input type="text" class="search-bar" placeholder="Enter City name">
+  <div class="card">  // i need to create card 
+    <div class="search">  // one search bar
+      <input type="text" class="search-bar" placeholder="Enter City name"> // 
       <button type="button" id="btn"> Click </button>
     </div>
     <div class="weather loading">
-      <h2 class="city">Weather in Denver</h2>
-      <h1 class="temp">51°C</h1>
+      <h2 class="city">Weather in Dharwad</h2>
+      <h1 class="temp">21°C</h1>
       <div class="flex">
         <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
         <div class="description">Cloudy</div>
