--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <div class="card">  // i need to create card 
-    <div class="search">  // one search bar
-      <input type="text" class="search-bar" placeholder="Enter City name"> // 
+  <div class="card"> 
+    <div class="search"> 
+      <input type="text" class="search-bar" placeholder="Enter City name"> 
       <button type="button" id="btn"> Click </button>
     </div>
     <div class="weather loading">
